force-app/main/default/objects/Product2/fields/Alumni_Association__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Association__c</fullName>
    <label>Alumni Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Alumni_Association</valueSetName>
    </valueSet>
</CustomField>