force-app/main/default/objects/Product2/fields/Media_Asset__c.field-meta.xml
<CustomField>
    <fullName>Media_Asset__c</fullName>
    <label>Media Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Media_Asset</valueSetName>
    </valueSet>
</CustomField>