force-app/main/default/objects/Product2/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publisher</valueSetName>
    </valueSet>
</CustomField>