force-app/main/default/objects/Product2/fields/UnitSize__c.field-meta.xml
<CustomField>
    <fullName>UnitSize__c</fullName>
    <description>This is the size of the product!</description>
    <label>Unit Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Size</valueSetName>
    </valueSet>
</CustomField>