force-app/main/default/objects/Product2/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Publisher__c</columns>
    <columns>Alumni_Association__c</columns>
    <columns>Media_Asset__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>UnitSize__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>